# destore

./: Cargo.toml  README.md
destore/: Cargo.toml  build.rs  destore.x
destore-tools/: Cargo.toml
destore-tools/src/: cache.rs  flash_utils.rs  lib.rs  main.rs  record_iterator.rs  schema_restorer.rs
destore-tools/tests/elf-schema-restore/: Cargo.toml  build.rs
destore-tools/tests/elf-schema-restore/.cargo/: config.toml
destore-tools/tests/elf-schema-restore/src/: main.rs
destore/src/: lib.rs  main.rs  schema.rs
example/: .gitignore  Cargo.toml  build.rs  partitions.csv
example/.cargo/: config.toml
example/src/: blocking_async.rs  lib.rs  schema.rs
