[package]
name = "destore-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
goblin = "0.8"
postcard-schema = { version= "0.2.1", features=["use-std", "alloc"]}
memmap2 = "0.9"
log = "0.4.26"
env_logger = "0.11.6"

[lib]
name = "destore_tools"
path = "src/schema_restorer.rs"

[[bin]]
name = "destore-tools"
path = "src/main.rs"
