[package]
name = "destore-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
goblin = "0.8"
postcard-schema = { version = "0.2.1", features = ["use-std", "alloc"] }
memmap2 = "0.9"
log = "0.4.26"
env_logger = "0.11.6"
clap = { version = "4.5.4", features = ["derive"] }
atty = { version = "0.2" }
espflash = { version = "3.0.0" }
tempfile = { version = "3.10.1" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
embedded-storage-async = "0.4.1"
clap-num = "1.2.0"
sequential-storage = { version = "4.0.1", features = ["std", "alloc"] }
futures = { version = "0.3.31", features = ["executor"] }
postcard-dyn = "0.2.0"
postcard = { version = "1.1.1", features = ["use-std", "alloc"] }



[lib]
name = "destore_tools"
path = "src/lib.rs"

[[bin]]
name = "destore"
path = "src/main.rs"
