[package]
name = "destore"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-storage-async = "0.4.1"
postcard = { version = "1.1.1" , features = ["alloc"]}
#postcard-dyn = "0.2.0"
postcard-schema = { version = "0.2.1" , features = ["alloc", "derive"]}
sequential-storage = "4.0.1"
serde = { version = "1.0.218" , default-features = false, features = ["derive"] }
